<!--
  ~ Copyright 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_viewer_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/video_viewer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="9:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/ok_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/ic_ok"
        android:contentDescription="@string/stop"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/ic_cancel"
        android:contentDescription="@string/cancel"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/ok_button"
        app:layout_constraintStart_toEndOf="@+id/ok_button"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/ok_button"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>